# openrc

./: .cirrus.yml  .clang-format  .clangd  .gitignore  .mailmap  .shellcheckrc  .travis.yml  AUTHORS  BUSYBOX.md  CODE_OF_CONDUCT.md  COPYRIGHT  ChangeLog  FEATURE-REMOVAL-SCHEDULE  FEATURE-REMOVAL-SCHEDULE.md  HACKING  HISTORY.md  LICENSE  Makefile  Makefile.BSD  Makefile.Linux  Makefile.inc  NEWNET.md  NEWS  NEWS.md  README  README.busybox  README.history  README.md  README.net  README.newnet  RELEASE-PROCESS.md  STYLE  STYLE-GUIDE.md  TODO  agetty-guide.md  default.mk  guide.md  index.html  init-guide.md  meson.build  (+12 more)
bash-completion/: meson.build  openrc  openrc-service-script  rc-service  rc-status  rc-update
conf.d/: .gitignore  Makefile  Makefile.FreeBSD  Makefile.Linux  Makefile.NetBSD  adjkerntz  agetty  bootmisc  cgroups  checkfs  clock  consolefont  devfs  dmesg  dumper  env_whitelist  fsck  hostname  hwclock  io-pkt  ipfw  keymaps  killprocs  local  local.start  local.stop  localmount  meson.build  modules  modules-late  modules.BSD.in  mount  moused  mtab  net  net-online  netmount  network  network.GNU-kFreeBSD.in  network.GNU.in  (+14 more)
etc/: .gitignore  Makefile  Makefile.FreeBSD  Makefile.Linux  Makefile.NetBSD  hosts  meson.build  networks  profile  rc.conf  rc.conf.DragonFly  rc.conf.FreeBSD  rc.conf.GNU  rc.conf.GNU-kFreeBSD  rc.conf.Linux  rc.conf.NetBSD  rc.conf.QNX  rc.conf.in  rc.devd  rc.in  rc.shutdown.in  services  shells
etc/env.d/: 00basic  Makefile
etc/profile.d/: Makefile
init.d/: .gitignore  Makefile  Makefile.FreeBSD  Makefile.Linux  Makefile.NetBSD  adjkerntz.in  agetty.in  backlight.in  binfmt.in  bootmisc  bootmisc.in  cgroups.in  checkfs  checkroot  consolefont.in  devc-pty.in  devd.in  devdb.in  devfs.in  dmesg.in  dumper.in  dumpon.in  encswap.in  fsck  fsck.in  halt.in  halt.sh  halt.sh.in  hostid.in  hostname  hostname.in  hwclock.in  io-pkt.in  ipfw.in  keymaps.in  killprocs.in  local  local.in  localmount  localmount.in  (+69 more)
man/: Makefile  einfo.3  meson.build  meson_man_links.sh  openrc-init.8  openrc-run.8  openrc-shutdown.8  openrc.8  rc-analyze.8  rc-depend.8  rc-service.8  rc-sstat.8  rc-status.8  rc-update.8  rc.8  rc_config.3  rc_deptree.3  rc_find_pids.3  rc_plugin_hook.3  rc_runlevel.3  rc_service.3  rc_strcatpaths.3  rc_stringlist.3  rc_strlist.3  runscript.8  service.8  start-stop-daemon.8  supervise-daemon.8
pkgconfig/: Makefile  meson.build
runlevels/: Makefile  Makefile.BSD  Makefile.FreeBSD  Makefile.Linux  Makefile.NetBSD  meson.build
scripts/: .gitignore  Makefile  halt.in  meson.build  meson_script_links.sh  on_ac_power  poweroff.in  rc-sstat.in  reboot.in  shutdown.in
sh/: .gitignore  Makefile  Makefile.FreeBSD  Makefile.Linux  Makefile.NetBSD  binfmt.sh.in  cgroup-release-agent.sh.in  cgroups.sh  functions.sh  functions.sh.in  gendepends.sh  gendepends.sh.in  ifwatchd-carrier.sh.in  ifwatchd-nocarrier.sh.in  init-common-post.sh  init-common-post.sh.in  init-early.Linux.sh.in  init-early.sh.Linux.in  init-functions.sh  init.Linux.sh.in  init.sh.BSD.in  init.sh.GNU-kFreeBSD.in  init.sh.GNU.in  init.sh.Linux.in  init.sh.QNX.in  meson.build  migrate-to-run.sh.in  net.sh  net.sh.in  openrc-run.sh.in  openrc-user.sh.in  rc-cgroup.sh  rc-cgroup.sh.in  rc-functions.sh  rc-functions.sh.in  rc-help.sh  rc-mount.sh  runit.sh  runscript.sh  runscript.sh.in  (+8 more)
src/: .depend  .gitignore  Makefile  Makefile.  Makefile.BSD  Makefile.Linux  Makefile.ncurses  Makefile.pam  Makefile.pam-dynamic  Makefile.termcap  _usage.c  _usage.h  builtins.h  cc.mk  checkown.c  checkpath.c  default.mk  depend.mk  einfo.h  env-update.c  env_whitelist  fstabinfo.c  hidden-visibility.h  lib.mk  libeinfo.c  librc-daemon.c  librc-depend.c  librc-depend.h  librc-misc.c  librc-strlist.c  librc.c  librc.h  meson.build  mountinfo.c  ncurses.mk  os.mk  pam.mk  prog.mk  rc-depend.c  rc-logger.c  (+16 more)
src/checkpath/: checkpath.c  meson.build
src/common/: meson.build  version.h.in  version.in
src/do_unmount/: do_unmount.c  meson.build
src/einfo/: einfo.c  meson.build
src/fstabinfo/: fstabinfo.c  meson.build
src/halt/: meson.build
src/includes/: helpers.h  hidden-visibility.h  rc-misc.h  strlist.h
src/is_newer_than/: is_newer_than.c  meson.build
src/is_older_than/: is_older_than.c  meson.build
src/kill_all/: kill_all.c  meson.build
src/libeinfo/: .gitignore  Makefile  einfo.h  libeinfo.c  libeinfo_new.c  meson.build
src/librc/: .gitignore  Makefile  librc-daemon.c  librc-depend.c  librc-depend.h  librc-depsolver.c  librc-depsolver.h  librc-misc.c  librc-stringlist.c  librc-strlist.c  librc-user.c  librc.c  librc.h  meson.build  rc-eventlog.c  rc.h  rc.h.in  rc.map
src/mark_service/: mark_service.c  meson.build
src/mountinfo/: libmountinfo.c  libmountinfo.h  meson.build  mountinfo.c
src/on_ac_power/: meson.build  on_ac_power
src/openrc/: meson.build  rc-logger.c  rc-logger.h  rc.c
src/openrc-init/: meson.build  openrc-init.c
src/openrc-pam/: meson.build  openrc-pam.c
src/openrc-run/: meson.build  openrc-run.c
src/openrc-shutdown/: broadcast.c  broadcast.h  meson.build  openrc-shutdown.c  sysvinit.c  sysvinit.h
src/openrc-user/: meson.build  openrc-user.c
src/pam_openrc/: meson.build  pam_openrc.c
src/poweroff/: meson.build  poweroff.in
src/rc/: .gitignore  Makefile  _usage.c  _usage.h  broadcast.c  broadcast.h  builtins.h  checkpath.c  do_e.c  do_mark_service.c  do_service.c  do_value.c  einfo.c  einfo.h  fstabinfo.c  is_newer_than.c  is_older_than.c  kill_all.c  (+32 more)
src/rc-abort/: meson.build  rc-abort.c
src/rc-analyze/: meson.build  rc-analyze.c
src/rc-depend/: meson.build  rc-depend.c
src/rc-env/: meson.build  rc-env.c
src/rc-environ/: meson.build  rc-environ.c
src/rc-service/: meson.build  rc-service.c
src/rc-sstat/: meson.build  rc-sstat
src/rc-status/: meson.build  rc-status.c
src/rc-update/: meson.build  rc-update.c
test/: check-obsolete-functions.sh  check-spacing-style.sh  check-trailing-newlines.sh  check-trailing-whitespace.sh  check-xfunc-usage.sh  meson.build  runtests.sh  setup_env.sh  travis.sh
(+414 files in other folders)
